# inno

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  PKGBUILD  README.md  cairo_text.c  cairo_text.h  cmake_install.cmake  execthis  inno  inno-0.1-1-x86_64.pkg.tar.zst  inno-debug-0.1-1-x86_64.pkg.tar.zst  inno.conf  inno.install  inno.service  inno.toml  main.c  render.c  render.h  rustfmt.toml  w  wayland-logo.h  wayland_init.c  wayland_init.h  wl-copy  wl.c
events/: battery.toml  bluetooth.toml  headset_battery.toml  laptop_battery.toml
handler/: .clangd  batenum  btdetect.c  dbus_debug_listener  dbus_handler.c  dbus_handler.h  enumbat.c  handler.c
layer/: cairo_image.c  cairo_image.h  cairo_text.c  cairo_text.h  image.c  image.h  layerhandler.c  layerhandler.h  render.c  render.h
pkg/inno/: .BUILDINFO  .MTREE  .PKGINFO
pkg/inno-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/inno-debug/usr/src/debug/inno/: main.c
protocols/: wlr-layer-shell-unstable-v1.xml
src/: config.c  config.h  config.rs  control.rs  dbus.rs  draw.rs  events.rs  layer.rs  main.c  main.rs
wbook/: client  client.c
