[package]
name = "inno"
version = "0.2.1"
edition = "2024"

[dependencies]
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-backend = "0.3"
cairo-rs = "0.21"
zbus = { version = "5.1", features = ["tokio"] }
tokio = { version = "1.49", features = ["full", "io-util", "fs"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
futures = "0.3"
libc = "0.2"
thiserror = "1.0"
notify = "6.0"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
